fix everything except enchants and Cthulhu