@@ -1,12 +1,10 @@
 package dev.screret.mitm;
 
 import com.google.common.collect.Maps;
-import com.google.gson.JsonObject;
+
 import net.minecraft.core.particles.ParticleOptions;
-import net.minecraft.nbt.CompoundTag;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraft.util.GsonHelper;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
@@ -19,14 +17,15 @@ import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.EntityHitResult;
 import net.minecraft.world.phys.Vec3;
+
+import dev.screret.mitm.common.item.component.WandComponent;
+import dev.screret.mitm.data.MITMDataComponents;
 import org.jetbrains.annotations.Nullable;
 import dev.screret.mitm.data.MITMWandAbilities;
-import dev.screret.mitm.api.capability.ability.CapabilityWandAbility;
-import dev.screret.mitm.api.wand.ability.WandAbility;
-import dev.screret.mitm.api.wand.ability.WandAbilityInstance;
+import dev.screret.mitm.api.ability.WandAbility;
+import dev.screret.mitm.api.ability.WandAbilityInstance;
 import dev.screret.mitm.api.registry.MITMRegistries;
 import dev.screret.mitm.data.MITMItems;
-import dev.screret.mitm.common.item.WandCoreItem;
 
 import java.util.Map;
 import java.util.Optional;
@@ -55,69 +54,47 @@ public class MITMUtil {
         });
     }
 
-    public static ItemStack createWand(WandAbility main, @Nullable WandAbility crouch) {
-        var tag = new CompoundTag();
-        var ability = new WandAbilityInstance(main);
-        tag.put(WandAbility.MAIN_ABILITY_KEY, ability.serializeNBT());
-        if (crouch != null) {
-            var ability1 = new WandAbilityInstance(crouch);
-            tag.put(WandAbility.CROUCH_ABILITY_KEY, ability1.serializeNBT());
-        }
-        CompoundTag parentTag = new CompoundTag();
-        parentTag.put(WandAbility.ABILITIES_KEY, tag);
-
-        ItemStack stack = new ItemStack(MITMItems.WAND.get(), 1);
-        stack.setTag(parentTag);
-        return stack;
-    }
-
-    public static ItemStack addWand(WandAbility main, @Nullable WandAbility crouch) {
-        return CUSTOM_WANDS.put(main.getKey(), createWand(main, crouch));
-    }
-
-    public static ItemStack createWand(Item item, WandAbilityInstance main, @Nullable WandAbilityInstance crouch) {
-        var tag = new CompoundTag();
-        tag.put(WandAbility.MAIN_ABILITY_KEY, main.serializeNBT());
-        if (crouch != null) {
-            tag.put(WandAbility.CROUCH_ABILITY_KEY, crouch.serializeNBT());
-        }
-        CompoundTag parentTag = new CompoundTag();
-        parentTag.put(WandAbility.ABILITIES_KEY, tag);
-
-        ItemStack stack = new ItemStack(item, 1);
-        stack.setTag(parentTag);
-        return stack;
+    public static ItemStack addWand(WandAbility<?> primary, @Nullable WandAbility<?> secondary) {
+        return CUSTOM_WANDS.put(primary.getKey(), createWand(primary, secondary));
     }
 
     public static ItemStack addWand(WandAbilityInstance main, @Nullable WandAbilityInstance crouch) {
         var childestAbility = main;
-        while (childestAbility.getChildren() != null && !childestAbility.getChildren().isEmpty()) {
-            childestAbility = childestAbility.getChildren().get(0);
+        while (!childestAbility.getChildren().isEmpty()) {
+            childestAbility = childestAbility.getChildren().getFirst();
         }
         return CUSTOM_WANDS.put(childestAbility.getId(), createWand(MITMItems.WAND.get(), main, crouch));
     }
 
-    public static ItemStack addWandCore(WandAbility ability) {
-        var coreStack = new ItemStack(MITMItems.WAND_CORE.get(), 1);
-        var tag = new CompoundTag();
-        tag.putString(WandCoreItem.ABILITY_KEY, ability.toString());
-        coreStack.setTag(tag);
+    public static ItemStack addWandCore(WandAbility<?> ability) {
+        var coreStack = new ItemStack(MITMItems.WAND_CORE.get());
+        coreStack.set(MITMDataComponents.WAND_CORE, new WandAbilityInstance(ability));
+
         return CUSTOM_WAND_CORES.put(ability.getKey(), coreStack);
     }
 
-    public static WandAbility getAbilityFromJson(JsonObject json, String key) {
-        return MITMRegistries.WAND_ABILITIES.get(ResourceLocation.parse(GsonHelper.getAsString(json, key)));
+    public static Optional<WandAbilityInstance> getMainAbilityFromStack(ItemStack stack) {
+        if (stack.is(MITMItems.WAND_CORE)) {
+            return Optional.ofNullable(stack.get(MITMDataComponents.WAND_CORE));
+        } else {
+            return Optional.ofNullable(stack.get(MITMDataComponents.WAND)).map(WandComponent::primary);
+        }
+    }
+
+    public static ItemStack createWand(WandAbility<?> primary, @Nullable WandAbility<?> secondary) {
+        WandAbilityInstance primaryInstance = new WandAbilityInstance(primary);
+        WandAbilityInstance secondaryInstance = secondary != null ? new WandAbilityInstance(secondary) : null;
+        return createWand(MITMItems.WAND.get(), primaryInstance, secondaryInstance);
+    }
+
+    public static ItemStack createWand(Item item, WandAbilityInstance primary, @Nullable WandAbilityInstance secondary) {
+        ItemStack stack = new ItemStack(item);
+        stack.set(MITMDataComponents.WAND, new WandComponent(primary, Optional.ofNullable(secondary), false));
+        return stack;
     }
 
     public static double randomInRange(RandomSource randomSource, double min, double max) {
         return (randomSource.nextDouble() * (max - min)) + min;
-    }
-
-    public static Optional<WandAbilityInstance> getMainAbilityFromStack(ItemStack stack) {
-        if (stack.getCapability(CapabilityWandAbility.WAND_ABILITY) != null) {
-            return Optional.of(stack.getCapability(CapabilityWandAbility.WAND_ABILITY).getMainAbility());
-        }
-        return Optional.empty();
     }
 
     public static ResourceLocation id(String path) {
@@ -153,10 +130,4 @@ public class MITMUtil {
             ((ServerLevel) level).sendParticles(particle, pos.x, pos.y, pos.z, 1, randomDeviation.x, randomDeviation.y, randomDeviation.z, 0);
         }
     }
-
-    public static class EntityOffset {
-        public Vec3 from, to;
-    }
-
-
 }
